gradle dependencies version shifted to one place, fragment layout is responsive, fragment attributes are defined in strings and dimen

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 buildscript {
     ext.kotlin_version = '1.7.20'
+    ext.core_ktx = '1.9.0'
+    ext.appcompat = '1.5.1'
+    ext.material = '1.6.0'
+    ext.constraintlayout = '2.1.4'
+    ext.junit = '4.13.2'
+    ext.test_junit = '1.1.4'
+    ext.espresso_core = '3.5.0'
+    ext.glide = '4.13.2'
+    ext.glide_compiler = '4.13.0'
     ext.nav_version = '2.5.3'
     ext.hilt_version = '2.40.5'
     ext.hilt_compiler_version = '1.0.0'
